--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                     <a class="logo" lang="en" href="./index.html"> <span class="logo-web">Web</span><span
                             class="logo-studio-black">Studio</span> </a>
                     <ul class="link-menu ">
-                        <li >
+                        <li>
                             <a class="link " href="./index.html">Студія</a>
                         </li>
                         <li class="dash-portfolio">
@@ -88,15 +88,35 @@
                 </ul>
                 <ul class="portfolio-list">
                     <li class="shadow-card">
-                        <img src="./images/techno.jpg" alt="Фото людей зображених на ноутбуці" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/techno.jpg" alt="Фото людей зображених на ноутбуці" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project">Технокряк</h3>
                             <p class="portfolio-direction">Веб-сайт</p>
-
                         </div>
+
                     </li>
                     <li class="shadow-card">
-                        <img src="./images/basket.jpg" alt="Спортсмени грають у баскетбол" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/basket.jpg" alt="Спортсмени грають у баскетбол" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project">Постер New Orlean vs Golden Star</h3>
                             <p class="portfolio-direction">Дизайн</p>
@@ -104,7 +124,17 @@
                         </div>
                     </li>
                     <li class="shadow-card">
-                        <img src="./images/seabood.jpg" alt="Логотип ресторану" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/seabood.jpg" alt="Логотип ресторану" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project">Ресторан Seafood</h3>
                             <p class="portfolio-direction">Додаток</p>
@@ -112,7 +142,17 @@
                         </div>
                     </li>
                     <li class="shadow-card">
-                        <img src="./images/headphones.jpg" alt="Навушники" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/headphones.jpg" alt="Навушники" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project">Проєкт Prime</h3>
                             <p class="portfolio-direction">Маркетинг</p>
@@ -120,7 +160,17 @@
                         </div>
                     </li>
                     <li class="shadow-card">
-                        <img src="./images/boxes.jpg" alt="Коробки для пакування" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/boxes.jpg" alt="Коробки для пакування" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project">Проєкт Boxes</h3>
                             <p class="portfolio-direction">Додаток</p>
@@ -128,7 +178,17 @@
                         </div>
                     </li>
                     <li class="shadow-card">
-                        <img src="./images/display.jpg" alt="Дисплей на якому зображено Веб-сайт" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/display.jpg" alt="Дисплей на якому зображено Веб-сайт" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project" lang="en">Inspiration has no Borders</h3>
                             <p class="portfolio-direction">Веб-сайт</p>
@@ -136,7 +196,17 @@
                         </div>
                     </li>
                     <li class="shadow-card">
-                        <img src="./images/book.jpg" alt="Відкрити сторінки журналу" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/book.jpg" alt="Відкрити сторінки журналу" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project">Видання Limited Edition</h3>
                             <p class="portfolio-direction">Дизайн</p>
@@ -144,7 +214,17 @@
 
                     </li>
                     <li class="shadow-card">
-                        <img src="./images/project-lab.jpg" alt="Бирка з написом" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/project-lab.jpg" alt="Бирка з написом" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project">Проєкт LAB</h3>
                             <p class="portfolio-direction">Маркетинг</p>
@@ -152,7 +232,17 @@
                         </div>
                     </li>
                     <li class="shadow-card">
-                        <img src="./images/notebook.jpg" alt="Людина працює на ноутбуці" width="370">
+                        <div class="box-overflow">
+                            <img src="./images/notebook.jpg" alt="Людина працює на ноутбуці" width="370">
+                            <div class="portfolio-overflow">
+                                <p class="overflow-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                        </div>
+
                         <div class="portfolio-border">
                             <h3 class="portfolio-project" lang="en">Growing Business</h3>
                             <p class="portfolio-direction">Додаток</p>
